Update the config, add build image script (#2)