@@ -1,18 +1,9 @@
-# syntax=docker/dockerfile:1
-FROM eclipse-temurin:25-jdk-jammy AS builder
-RUN $JAVA_HOME/bin/jlink \
-    --add-modules java.se \
-    --strip-debug \
-    --no-man-pages \
-    --no-header-files \
-    --compress=2 \
-    --output /jre/
+FROM eclipse-temurin:25-jre-alpine
 
-FROM ubuntu:jammy
-ENV JAVA_HOME=/opt/java/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-COPY --from=builder /jre/ $JAVA_HOME
+WORKDIR /app
 
-# Use Fat JAR for simplicity
 COPY target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "./app.jar"]
+
+EXPOSE 8081
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
